#1037: Fix language switcher is covered.
Only on IE11 only on screens wider than 1024 (non mobile) but shorter than 730 pixels.

--- a/source/widgets/header/header.scss
+++ b/source/widgets/header/header.scss
@@ -69,7 +69,7 @@ body.is-env-test .widg_header {
 	}
 
 	/**
-  * Smaller then 1024 leads to the top bar
+  * Smaller than 1024 leads to the top bar
   */
 	@include mq($to: medium) {
 		width: 100%;
@@ -92,6 +92,12 @@ body.is-env-test .widg_header {
 
 		@include mq($to: small) {
 			padding: 15px $basicPush * 2;
+		}
+	}
+
+	@include mq($from: medium) {
+		.-ms- & {
+			min-height: 570px;
 		}
 	}
 
